# ModelViewer

./: .gitignore  CMakeLists.txt  README.md  READ_ME.txt
ResourceLib/: CMakeLists.txt
ResourceLib/Core/: CMakeLists.txt
ResourceLib/Core/Header/Core/: Application.h  camera.h  mainManager.h
ResourceLib/Core/Source/: Application.cpp  camera.cpp  mainManager.cpp
ResourceLib/Dependencies/: CMakeLists.txt
ResourceLib/Dependencies/Header/: pch.h
ResourceLib/LibMath/: CMakeLists.txt
ResourceLib/LibMath/Header/LibMath/: Arithmetic.h  Interpolation.h  Intersection.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  Trigonometry.h
ResourceLib/LibMath/Header/LibMath/Angle/: Degree.h  Radian.h
ResourceLib/LibMath/Header/LibMath/Collision/: Collision2D.h  Collision3D.h
ResourceLib/LibMath/Header/LibMath/Matrix/: Mat2x2.h  Mat2x2.hpp  Mat3x3.h  Mat3x3.hpp  Mat4x4.h  Mat4x4.hpp  Matrix.h
ResourceLib/LibMath/Header/LibMath/Vector/: Vec1.h  Vec1.hpp  Vec2.h  Vec2.hpp  Vec3.h  Vec3.hpp  Vec4.h  Vec4.hpp  Vector.h
ResourceLib/LibMath/Source/: Arithmetic.cpp  Interpolation.cpp  Trigonometry.cpp
ResourceLib/LibMath/Source/Angle/: Angle.cpp
ResourceLib/LibMath/Source/Collision/: Collision2D.cpp  Collision3D.cpp
ResourceLib/Resources/: CMakeLists.txt
ResourceLib/Resources/Header/Resources/: Entity.h  Iresources.h  Model.h  ResourceManager.h  ResourcesManager.hpp  Scene.h  Shader.h  rapidobj.hpp  texture.h
ResourceLib/Resources/Source/: Entity.cpp  Model.cpp  RessourceManager.cpp  Scene.cpp  Shader.cpp  texture.cpp
Viewer/: CMakeLists.txt
Viewer/Assets/Meshes/cube/: cube_with_texture.mtl
Viewer/Shaders/: fragmentShaderSrc.GLSL  vertexShaderSrc.GLSL
Viewer/Source/: main.cpp
